2005-11-11  Charles Levert  <charles_levert@gna.org>

	* configure.in (ALL_LINGUAS): Add languages that were missing
	  from this variable (bg, ca, da, nb, tr), but that GNU grep supports
	  with a po/xx.po file.  Reported by Tony Abou-Assaleh <taa@acm.org>.

	* src/search.c (Pcompile): Abort in error if -P and multiple patterns
	  are specified, with an error message explaining the situation.
	  Fixing this won't be simple; the '\n' characters separating the
	  patterns cannot just be replaced by '|' to create an alternation as
	  back-references are assumed to be local to each individual pattern.

	* src/grep.c (parse_grep_colors, main): Replace all uses of
	  fprintf(stderr, _("%s: foo\n"), program_name, ...) with
	  error(0, 0, _("foo"), ...) for uniformization and simplification
	  of warning messages that will be up for localization.  (My bad.)

2005-11-10  Charles Levert  <charles_levert@gna.org>

	The introduction of the --only-matching and --color GNU extensions
	to grep added the requirement that each execute() implementation
	not only be able to identify matching lines as a whole, but also
	individual "exact" matches within a line known to be matching,
	from leftmost to rightmost match, when the output from matching
	lines is actually produced.  The interface and implementations
	of execute() were not up to it.  This set of changes aims to
	rectify that situation.  Previously failing tests relative to
	left anchors (^ and \<) and -w should now pass.  This fixes
	<http://savannah.gnu.org/bugs/?func=detailitem&item_id=11579>,
	<http://savannah.gnu.org/patch/?func=detailitem&item_id=1834>,
	<http://savannah.gnu.org/bugs/?func=detailitem&item_id=8243>,
	and possibly part of other, bigger, pending patches.  The problem
	was also compounded by the POSIX requirement to support a pattern
	list instead of just an individual pattern (for -G and -E as well).

	* tests/foad1.sh: Test for increasing/decreasing-length word