@@ -4,12 +4,13 @@ AWK=@AWK@
 
 TESTS = warning.sh khadafy.sh spencer1.sh bre.sh ere.sh pcre.sh \
         status.sh empty.sh options.sh backref.sh file.sh foad1.sh \
-        fmbtest.sh
+        fmbtest.sh yesno.sh
 EXTRA_DIST = $(TESTS) \
              khadafy.lines khadafy.regexp \
              spencer1.awk spencer1.tests \
              bre.awk ere.awk bre.tests ere.tests
-CLEANFILES = spencer1.script bre.script ere.script khadafy.out patfile
+CLEANFILES = spencer1.script bre.script ere.script khadafy.out patfile \
+             cspatfile csinput yesno.txt
 TESTS_ENVIRONMENT = \
 	AWK=$(AWK) \
 	GREP=$(top_builddir)/src/grep \
